[tool.poetry]
name = "boticario-cashback"
version = "0.1.0"
description = ""
authors = ["Egor C. Rodrigues"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70"
databases = "^0.5.3"
prettyconf = "^2.2.1"
uvicorn = {version = "^0.15.0", extras = ["standard"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
alembic = "^1.7"
email-validator = "^1.1.3"
httpx = "^0.20"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
python-multipart = "^0.0.5"
SQLAlchemy = {version = "^1.4.26", extras = ["asyncio"]}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
coverage = "^6.1"
flake8 = "^4.0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2"
pytest-cov = "^3.0"
pytest-asyncio = "^0.16"
aiosqlite = "^0.17.0"
pytest-vcr = "^1.0.2"

[tool.black]
line-length = 79
target-version = [ "py39" ]
include = "\\.pyi?$"
exclude = """
(
  /(
      \\.eggs         # exclude a few common directories in the
    | \\.git          # root of the project
    | \\.hg
    | \\.mypy_cache
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )
)
"""

[tool.isort]
line_length = 79
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
skip_glob = [
    "**migrations**",
]

[tool.coverage.run]
branch = true
omit = [
  "src/main.py",
  "**migrations**",
  "**tests**"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
